Erase player action has been ported